deploy: 1839c47748cfd1ea4f0840a9db4b340df3e236a8

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
         <article>
           <section>
             <p>
-              Hello! I have no idea how you ended up here, but otherwise, I will apologize for what seems like either a run of bad luck for you or maybe your just having a bad day. Either way, I am glad your here. My name is
+              Hello! I have no idea how you ended up here, but otherwise, I will
+              apologize for what seems like either a run of bad luck for you or
+              maybe your just having a bad day. Either way, I am glad your here.
+              My name is
               <b>Phillip Jackson</b>,
               <i>a.k.a</i>
               <b>Unisys12</b>. Online, most of my friends call me Uni.
@@ -62,146 +65,69 @@
           </section>
           <section>
             <p>
-              In February of 2020, my wife started her own business as a dog trainer. In November of 2020, she was scheduled to have surgery which was going to require a 3 to 4-week recovery time. We had planned for this,
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              my employer included, by me saving all my vacation time for this period. At around the same time is when
-              COVID-19 started having a greater impact locally. I ended up being off work for 2 months straight. During
-              this period, my wife and I discussed me leaving my then current job and coming home to help her. She had
-              tried hiring several different people so they could assist her and was unable to find someone with a drive
-              and passion for animals, coupled with a sense of responsibility. For various reasons, I was looking for a
-              change. Not so much in my carrier, per-say. But simply a chance to do something more. After 16 years at
-              Rayco, Inc, I felt like I had nowhere else to go or anything else to offer. And learning how to train dogs
-              was going to be a whole new world that I was free to explore. Since I was going to be self-employed, the
-              only ladder I had to climb was the one I propped up for myself. If I wanted to go higher, at any time, I
-              could. And I did! I have enjoyed this time tremendously and do not regret my decision to leave my old job
-              in the slightest. During these last few years, I have grown so much and even at 50 years of age I feel as
-              though I have matured. Slightly. I have a new-found respect for business owners and the mental capacity
-              needed to maintain that business. I have never worked harder in my life than I have since leaving my old
-              job.
+              In February of 2020, my wife started her own business as a dog
+              trainer. In November of 2020, she was scheduled to have surgery
+              which was going to require a 3 to 4-week recovery time. We had
+              planned for this, my employer included, by me saving all my
+              vacation time for this period. At around the same time is when
+              COVID-19 started having a greater impact locally. I ended up being
+              off work for 2 months straight. During this period, my wife and I
+              discussed me leaving my then current job and coming home to help
+              her. She had tried hiring several different people so they could
+              assist her and was unable to find someone with a drive and passion
+              for animals, coupled with a sense of responsibility. For various
+              reasons, I was looking for a change. Not so much in my carrier,
+              per-say. But simply a chance to do something more. After 16 years
+              at Rayco, Inc, I felt like I had nowhere else to go or anything
+              else to offer. And learning how to train dogs was going to be a
+              whole new world that I was free to explore. Since I was going to
+              be self-employed, the only ladder I had to climb was the one I
+              propped up for myself. If I wanted to go higher, at any time, I
+              could. And I did! I have enjoyed this time tremendously and do not
+              regret my decision to leave my old job in the slightest. During
+              these last few years, I have grown so much and even at 50 years of
+              age I feel as though I have matured. Slightly. I have a new-found
+              respect for business owners and the mental capacity needed to
+              maintain that business. I have never worked harder in my life than
+              I have since leaving my old job.
             </p>
           </section>
 
           <section>
             <p>
-              Technology, and science in general, is still one of my deepest passions and I find ways to incorporate it
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              whenever I can. Be it through my 25+ yrs of web development experience or figuring out ways to utilize our
-              Office 365 Grant to the fullest.
+              Technology, and science in general, is still one of my deepest
+              passions and I find ways to incorporate it whenever I can. Be it
+              through my 25+ yrs of web development experience or figuring out
+              ways to utilize our Office 365 Grant to the fullest.
             </p>
           </section>
 
           <section>
             <p>
-              Dabbling in web development over the last 25+ years has been a blessing and a curse. I am the
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              quintessential _"Jack of all trades, master of none!"_ if I am being completely honest. I have a ton of
-              experience in a lot of different areas, but never really feel like I have mastered a single one. Then
-              again, that can be a good thing. I am very open minded and have never felt the need to follow any flow or
-              trend in the industry. I have a few tools that I have built over the years and when I want to learn
-              something new, I rebuild those tools. Compound Learning, I think that's what is called. Maybe I made that
-              up? Either way, I love to code. I love to solve problems. And I love helping people with problems. I don't
-              mind reaching into a box to find the answers, but I am also not afraid to think outside of the box to get
-              to a solution. I feel that these aspects of my personality are very valuable that I can bring to the
-              table. I have a very strong work ethic and I am not afraid to get my hands dirty. I have a very strong
-              sense of responsibility and I take pride in my work. I am not afraid to ask for help when I need it, but I
-              also do not mind helping others when they need it. I am a very loyal person and I will always do my best
-              to help those around me. I am a very positive person and I try to see the good in everything. I am a very
-              open-minded person and I try to be as inclusive as possible. I am a very patient person and I try to be as
-              understanding as possible. I am a very compassionate person and I try to be as empathetic as possible.
+              Dabbling in web development over the last 25+ years has been a
+              blessing and a curse. I am the quintessential _"Jack of all trades,
+              master of none!"_ if I am being completely honest. I have a ton of
+              experience in a lot of different areas, but never really feel like
+              I have mastered a single one. Then again, that can be a good
+              thing. I am very open minded and have never felt the need to follow
+              any flow or trend in the industry. I have a few tools that I have
+              built over the years and when I want to learn something new, I
+              rebuild those tools. Compound Learning, I think that's what is
+              called. Maybe I made that up? Either way, I love to code. I love
+              to solve problems. And I love helping people with problems. I don't
+              mind reaching into a box to find the answers, but I am also not
+              afraid to think outside of the box to get to a solution. I feel
+              that these aspects of my personality are very valuable that I can
+              bring to the table. I have a very strong work ethic and I am not
+              afraid to get my hands dirty. I have a very strong sense of
+              responsibility and I take pride in my work. I am not afraid to ask
+              for help when I need it, but I also do not mind helping others
+              when they need it. I am a very loyal person and I will always do
+              my best to help those around me. I am a very positive person and I
+              try to see the good in everything. I am a very open-minded person
+              and I try to be as inclusive as possible. I am a very patient
+              person and I try to be as understanding as possible. I am a very
+              compassionate person and I try to be as empathetic as possible.
             </p>
           </section>
           <figure>
@@ -209,14 +135,10 @@
           </figure>
         </article>
         <figure class="profile">
-          <img
-            src="https://res.cloudinary.com/ftpta-com/image/upload/f_auto,q_auto,w_600/v1616786121/Boudreaux/20201026_201311_szrmhq.webp"
-            sizes="(max-width: 600px) 480px, 800px"
-            srcset="
+          <img src="https://res.cloudinary.com/ftpta-com/image/upload/f_auto,q_auto,w_600/v1616786121/Boudreaux/20201026_201311_szrmhq.webp" sizes="(max-width: 600px) 480px, 800px" srcset="
               https://res.cloudinary.com/ftpta-com/image/upload/f_auto,q_auto,w_800/v1616786121/Boudreaux/20201026_201311_szrmhq.webp 800w,
               https://res.cloudinary.com/ftpta-com/image/upload/f_auto,q_auto,w_480/v1616786121/Boudreaux/20201026_201311_szrmhq.webp 480w
-            "
-            alt="profile">
+            " alt="profile">
           <figcaption>Me with a clients frenchy after a training session at a local Tractor Supply.</figcaption>
         </figure>
       </div>
