deploy: a249a391e4437f41c3f58768ecaa745da4b796a9

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="">
 <meta property="og:description" content="Unisy&#39;s Blog - A personal blog about my life, work, and interests.">
-<meta property="og:image" content="">
+<meta property="og:image" content="https://res.cloudinary.com/ftpta-com/image/upload/f_auto,q_auto,w_480/v1616786121/Boudreaux/20201026_201311_szrmhq.webp">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
@@ -27,7 +27,7 @@
 <meta property="twitter:url" content="https://unisys12.github.io/">
 <meta name="twitter:title" content="">
 <meta name="twitter:description" content="Unisy&#39;s Blog - A personal blog about my life, work, and interests.">
-<meta name="twitter:image" content="">
+<meta name="twitter:image" content="https://res.cloudinary.com/ftpta-com/image/upload/f_auto,q_auto,w_480/v1616786121/Boudreaux/20201026_201311_szrmhq.webp">
   </head>
 
   <body class="container">
